--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   },
   "autoload": {
     "psr-4": {
-      "DemigrantSoft\\Telegram\\SendMessage\\": "src/"
+      "AdnanMula\\Telegram\\SendMessage\\": "src/"
     }
   }
 }
